--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,21 @@
 name: lint and format
-on: push
+
+on:
+  workflow_dispatch:
+    inputs:
+      tags:
+        description: "version"
+        required: false
+        type: string
+  push:
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
 jobs:
   lint-and-format:
     name: linter and formatter
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
@@ -16,7 +27,7 @@ jobs:
           python-version: "3.11"
 
       - name: Install shell linter
-        run: apt-get install shellcheck
+        run: sudo apt-get install shellcheck
 
       - name: Install python formatter and linter
         run: |
@@ -31,57 +42,3 @@ jobs:
 
       - name: Run shell linter
         run: find . -type f -name "run" -exec shellcheck {} +
-
-  build:
-    name: build classic docker images
-    runs-on: ubuntu-latest 
-
-    strategy:
-      matrix:
-        platform: [amd64, arm64]
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install Python
-        uses: actions/setup-python@v5
-
-      - name: Install shell linter
-        run: python3 render_templates.py
-
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: |
-            ${{ github.repository_owner }}/${{ github.event.repository.name }}
-            ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}
-          tags: |
-            type=raw,value=${{ matrix.platform == 'arm64' ? 'arm64-latest' : 'latest' }},enable=${{ github.event_name == 'release' }}
-            type=ref,event=branch
-            type=ref,event=pr
-            type=ref,event=tag
-            type=raw,value=${{ inputs.tags }},enable=${{ github.event_name == 'workflow_dispatch' }}
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ secrets.GITHUB_USERNAME }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push docker images
-        uses: docker/build-push-action@v5
-        with:
-          context: build-main
-          file: Dockerfile${{ matrix.platform == 'arm64' ? '.aarch64' : '' }}
-          platforms: linux/${{ matrix.platform }}
-          tags: ghcr.io/your-username/your-repo:${{ matrix.platform == 'arm64' ? 'arm64-latest' : 'latest' }}
-
