--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,7 +3,7 @@ name: Docker build
 on:
   workflow_dispatch:
     inputs:
-      tags:
+      version:
         description: "version"
         required: false
         type: string
@@ -37,9 +37,20 @@ jobs:
             file: Dockerfile
             platforms: linux/amd64,linux/arm64
 
+          - image: noml
+            context: build-noml
+            file: Dockerfile
+            platforms: linux/amd64,linux/arm64
+            suffix: -noml
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Set tags
+        id: tags
+        run: |
+          echo "build_date=$(date +'%Y-%m-%dT%H:%M:%S%:z')" >> $GITHUB_ENV
 
       - name: Create Dockerfile from template
         run: python3 render_templates.py
@@ -55,7 +66,7 @@ jobs:
             type=ref,event=branch,enable=${{ github.event_name != 'workflow_dispatch' }}
             type=ref,event=pr
             type=ref,event=tag
-            type=raw,value=${{ inputs.tags }},enable=${{ github.event_name == 'workflow_dispatch' }},suffix=${{ matrix.suffix }}
+            type=raw,value=${{ inputs.version }},enable=${{ github.event_name == 'workflow_dispatch' }},suffix=${{ matrix.suffix }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -74,8 +85,11 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ${{ matrix.context }}
+          provenance: false # prevent unknown architecture
           file: ${{ matrix.context }}/${{ matrix.file }}
           platforms: ${{ matrix.platforms }}
           push: ${{ github.event_name == 'workflow_dispatch' }}
           labels: ${{ steps.metadata.outputs.labels }}
           tags: ${{ steps.metadata.outputs.tags }}
+          build-args: |
+            IMMICH_VERSION=${{ inputs.version }}
