--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,6 @@
 name: Run tests
 
 on:
-  workflow_dispatch:
-    inputs:
-      tags:
-        description: "version"
-        required: false
-        type: string
   push:
     branches: ["main"]
   pull_request:
@@ -39,3 +33,5 @@ jobs:
 
       - name: Run ShellCheck
         uses: ludeeus/action-shellcheck@master
+        with:
+          additional_files: 'run'
