--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -11,9 +11,13 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
+  repository_dispatch:
+    types: [trigger_build]
+  schedule:
+    - cron: "0 12 * * 3"
 
 jobs:
-  build-classic-amd64:
+  build_docker:
     name: build docker images
     runs-on: ubuntu-latest
 
@@ -46,6 +50,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set tags
         id: tags
@@ -53,6 +59,9 @@ jobs:
           echo "Generate tags"
           if [ "${{ inputs.version }}" != '' ]; then
             echo "immich_version=${{ inputs.version }}" >> $GITHUB_OUTPUT
+          elif [ -n "${{ github.event.client_payload.message }}" ]; then
+            immich_version="${{ github.event.client_payload.message }}"
+            echo "immich_version=${immich_version}" >> $GITHUB_OUTPUT
           else
             immich_version=$(curl -sL https://api.github.com/repos/immich-app/immich/releases/latest | jq -r '.tag_name')
             echo "immich_version=${immich_version}" >> $GITHUB_OUTPUT
