--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,22 +14,23 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Install Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install python formatter and linter
-        run: |
-          python -m pip install --upgrade pip
-          pip install ruff black
+      - name: Install python formatter
+        run: pip install ruff
 
       - name: Run linter
         run: ruff check **.py
 
-      - name: Run formatter
-        run: black --check **.py
+      - uses: psf/black@stable
+        with:
+          options: "--check --verbose"
 
       - name: Run ShellCheck
         uses: ludeeus/action-shellcheck@master
