--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -11,8 +11,6 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
-  repository_dispatch:
-    types: [trigger_build]
   schedule:
     - cron: "0 12 * * 3"
 
@@ -60,8 +58,6 @@ jobs:
           echo "Generate tags"
           if [ "${{ inputs.version }}" != '' ]; then
             immich_version="${{ inputs.version }}"
-          elif [ -n "${{ github.event.client_payload.message }}" ]; then
-            immich_version="${{ github.event.client_payload.message }}"
           else
             immich_version=$(curl -sL https://api.github.com/repos/immich-app/immich/releases/latest | jq -r '.tag_name')
           fi
@@ -102,7 +98,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GH_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push docker images
         uses: docker/build-push-action@v5
