--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,24 +27,24 @@ jobs:
       matrix:
         include:
           - image: openvino
-            type: main
+            group: main
             flavor: openvino
             platforms: linux/amd64
             suffix: -openvino
 
           - image: cuda
-            type: main
+            group: main
             flavor: cuda
             platforms: linux/amd64
             suffix: -cuda
 
           - image: classic
-            type: main
+            group: main
             flavor: classic
             platforms: linux/amd64,linux/arm64
 
           - image: noml
-            type: noml
+            group: noml
             flavor: classic
             platforms: linux/amd64,linux/arm64
             suffix: -noml
@@ -91,7 +91,7 @@ jobs:
           echo "short_version=${short_version}" >> $GITHUB_OUTPUT
 
       - name: Create Dockerfile from template
-        run: python3 render_templates.py --type ${{ matrix.type }} --flavor ${{ matrix.flavor }}
+        run: python3 render_templates.py --group ${{ matrix.group }} --flavor ${{ matrix.flavor }}
 
       - name: Generate docker image tags
         id: metadata
@@ -125,7 +125,7 @@ jobs:
       - name: Build and push docker images
         uses: docker/build-push-action@v5
         with:
-          context: build-${{ matrix.type }}/${{ matrix.flavor }}
+          context: build-${{ matrix.group }}/${{ matrix.flavor }}
           provenance: false # prevent unknown architecture
           platforms: ${{ matrix.platforms }}
           push: true
