fix small issues

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,21 +27,17 @@ jobs:
       matrix:
         include:
           - image: openvino
-            flavor: openvino
             platforms: linux/amd64
             suffix: -openvino
 
           - image: cuda
-            flavor: cuda
             platforms: linux/amd64
             suffix: -cuda
 
           - image: classic
-            flavor: classic
             platforms: linux/amd64,linux/arm64
 
           - image: noml
-            flavor: noml
             platforms: linux/amd64,linux/arm64
             suffix: -noml
 
@@ -87,7 +83,7 @@ jobs:
           echo "short_version=${short_version}" >> $GITHUB_OUTPUT
 
       - name: Create Dockerfile from template
-        run: python3 render_templates/main.py --flavor ${{ matrix.flavor }}
+        run: python3 render_templates/main.py --flavor ${{ matrix.image }}
 
       - name: Generate docker image tags
         id: metadata
@@ -121,7 +117,7 @@ jobs:
       - name: Build and push docker images
         uses: docker/build-push-action@v5
         with:
-          context: build-${{ matrix.flavor }}
+          context: build-${{ matrix.image }}
           provenance: false # prevent unknown architecture
           platforms: ${{ matrix.platforms }}
           push: true
