refactor: context folder (#5)
* refactor: context folder

* update openvino version

* fix: ci

* find folders once

* merge main

* feat: render templates for single flavor

* fix: names

* fix: tests

* fix: simplify

* fix small issues

* fix: templates

* fix: diferentiate openvino and python dependencies

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,39 +7,60 @@ on:
     branches: ["main"]
 
 jobs:
-  lint-and-format:
+  python-unit-tests:
     name: tests
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Install Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install formatters
+      - name: Install poetry
+        run: pipx install poetry
+
+      - name: Setup poetry
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
+          cache: "poetry"
+
+      - name: Install python dependencies
         run: |
-          pip install ruff==0.3.2
-          npm i prettier@3.2.5
+          poetry install --with dev,test
 
       - name: Run python linter
-        run: ruff check **.py
+        run: poetry run ruff check .
+        if: ${{ !cancelled() }}
 
       - name: Run python formatter
-        uses: psf/black@stable
-        with:
-          options: "--check --verbose"
-          version: "24.2.0"
+        run: poetry run black --check .
+        if: ${{ !cancelled() }}
 
-      - name: Run formatter
-        run: npx prettier --check .
+      - name: Run tests and coverage
+        run: poetry run pytest render_templates
+        if: ${{ !cancelled() }}
+
+  shellcheck:
+    name: ShellCheck
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
       - name: Run ShellCheck
         uses: ludeeus/action-shellcheck@master
-        with:
-          additional_files: "run"
+
+  format:
+    name: Prettier
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install prettier
+        run: |
+          npm i prettier@3.2.5
+
+      - name: Run formatter
+        run: npx prettier --check .
