--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,33 +27,23 @@ jobs:
       matrix:
         include:
           - image: openvino
-            context: build-main
-            file: Dockerfile.openvino
             platforms: linux/amd64
             suffix: -openvino
 
           - image: cuda
-            context: build-main
-            file: Dockerfile.cuda
             platforms: linux/amd64
             suffix: -cuda
 
           - image: classic
-            context: build-main
-            file: Dockerfile
             platforms: linux/amd64,linux/arm64
 
           - image: noml
-            context: build-noml
-            file: Dockerfile
             platforms: linux/amd64,linux/arm64
             suffix: -noml
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Set tags
         id: tags
@@ -63,6 +53,27 @@ jobs:
             immich_version="${{ inputs.version }}"
           else
             immich_version=$(curl -sL https://api.github.com/repos/immich-app/immich/releases/latest | jq -r '.tag_name')
+            counter=0
+
+            # Loop until immich_version is not "null" or counter reaches 10
+            while [ $counter -lt 10 ]; do
+                immich_version=$(curl -sL https://api.github.com/repos/immich-app/immich/releases/latest | jq -r '.tag_name')
+
+                # Check if immich_version is not "null"
+                if [ "$immich_version" != "null" ]; then
+                    echo "immich_version is not null: $immich_version"
+                    break
+                else
+                    echo "immich_version is still null, retrying in 10 seconds..."
+                    sleep 10
+                    ((counter++))
+                fi
+            done
+
+            if [ "$immich_version" = "null" ]; then
+                echo "immich_version is still null after 10 attempts, exiting..."
+                exit 1
+            fi
           fi
           short_version="${immich_version#v}"
           echo "immich_version=${immich_version}" >> $GITHUB_OUTPUT
@@ -72,7 +83,7 @@ jobs:
           echo "short_version=${short_version}" >> $GITHUB_OUTPUT
 
       - name: Create Dockerfile from template
-        run: python3 render_templates.py
+        run: python3 render_templates/main.py --flavor ${{ matrix.image }}
 
       - name: Generate docker image tags
         id: metadata
@@ -106,9 +117,8 @@ jobs:
       - name: Build and push docker images
         uses: docker/build-push-action@v5
         with:
-          context: ${{ matrix.context }}
+          context: build-${{ matrix.image }}
           provenance: false # prevent unknown architecture
-          file: ${{ matrix.context }}/${{ matrix.file }}
           platforms: ${{ matrix.platforms }}
           push: true
           labels: ${{ steps.metadata.outputs.labels }}
