--- a/.github/workflows/external-trigger.yml
+++ b/.github/workflows/external-trigger.yml
@@ -22,6 +22,10 @@ jobs:
         run: |
           current_version=$(curl -sL https://api.github.com/repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/releases/latest | jq -r '.tag_name')
           immich_version=$(curl -sL https://api.github.com/repos/immich-app/immich/releases/latest | jq -r '.tag_name')
+          if [ -z "$current_version" ] || [ -z "$immich_version" ]; then
+              echo "Error: One of the versions is null."
+              exit 1
+          fi
           if [ "$current_version" != "$immich_version" ]; then
             if git tag | grep -q "^$immich_version$"; then
               echo "Tag '$immich_version' exists."
