--- a/.github/workflows/external-trigger.yml
+++ b/.github/workflows/external-trigger.yml
@@ -66,5 +66,4 @@ jobs:
       - name: Trigger workflow
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh workflow run docker.yml -f version=${{ needs.check_new_version.outputs.immich_version }}
+        run: gh workflow run docker.yml -f version=${{ needs.check_new_version.outputs.immich_version }}
