--- a/.github/workflows/permissions.yml
+++ b/.github/workflows/permissions.yml
@@ -5,6 +5,10 @@ on:
   pull_request:
     branches: ["main"]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   permission_check:
     runs-on: ubuntu-latest
